Update user profile + add card block info premium subscribe v10

--- a/settings.html
+++ b/settings.html
@@ -70,9 +70,9 @@
         <label class=" settings-card-gender theme-text">Gender</label>
         <div class="select-wrapper">
           <select class="theme-input" id="genderSelect">
-            <option selected disabled>Select gender</option>
-            <option>Male</option>
-            <option>Female</option>
+            <option selected disabled></option>
+            <option value="Male"></option>
+            <option value="Female"></option>
           </select>
           <img class="select-arrow theme-icon" src="assets/icons/angle-small-down.svg" alt="Arrow" />
         </div>
