Update user profile + add card block info premium subscribe v16

--- a/settings.html
+++ b/settings.html
@@ -112,7 +112,7 @@
         <div class="select-wrapper">
           <select class="theme-input" id="countrySelect">
             <option selected disabled>Select country</option>
-            <!-- options... -->
+            <!-- из js скрипта берем страны... -->
           </select>
           <img class="select-arrow theme-icon" src="assets/icons/angle-small-down.svg" alt="Arrow" />
         </div>
