Update settings localization v26

--- a/profile.html
+++ b/profile.html
@@ -412,17 +412,17 @@
 
             <!-- Блок подписки -->
             <div class="premium-subscribe-card" style="display: none;">
-                <div class="data-title gray-text">Подписка</div>
+                <div class="data-title premium-subscribe-title gray-text">Subscription</div>
 
                 <div class="data-item theme-text">
                     <img src="/assets/icons/benefit.svg" class="data-icon theme-icon" alt="Premium">
-                    <span class="label-premium theme-text">Статус подписки:</span>
+                    <span class="label-premium status-subscribe-text theme-text">Subscription status:</span>
                     <span class="user-premium-status"></span>
                 </div>
 
                 <div class="data-item theme-text">
                     <img src="/assets/icons/exclamation.svg" class="data-icon theme-icon" alt="Plan">
-                    <span class="label-premium theme-text">Тарифный план:</span>
+                    <span class="label-premium tarif-plan-text theme-text">Tariff plan:</span>
                     <span class="user-premium-tarif-status"></span>
                 </div>
             </div>
