--- a/profile.html
+++ b/profile.html
@@ -433,7 +433,7 @@
             <div class="footer-content">
                 <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
                 <a href="/about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
-                <a href="brand.html" class="footer-link nav-partners">Partners</a>
+                <a href="/brand.html" class="footer-link nav-partners">Partners</a>
             </div>
             <div class="footer-social">
                 <span class="social-platforms">Social:</span>
