Add referal system

--- a/about.html
+++ b/about.html
@@ -7,19 +7,19 @@
     <title>ValeyevStudio - About</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/typography.css">
+    <link rel="stylesheet" href="css/themes.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/menu_dropdown.css">
-    <link rel="stylesheet" href="css/themes.css">
-    <link rel="stylesheet" href="css/typography.css">
+    <link rel="stylesheet" href="css/about.css">
     <!-- Подключение кастомных стилей -->
     <link rel="stylesheet" href="css/captcha.css">
     <link rel="stylesheet" href="css/interactivehelp.css">
     <link rel="stylesheet" href="css/pushnotify.css">
-    <link rel="stylesheet" href="/css/modal_message.css">
+    <link rel="stylesheet" href="css/modal_message.css">
     <link rel="stylesheet" href="css/banner_promo.css">
     <link rel="stylesheet" href="css/modal_promo.css">
-    <link rel="stylesheet" href="/css/deposit.css">
+    <link rel="stylesheet" href="css/deposit.css">
     <link rel="stylesheet" href="css/modal_premium.css">
 </head>
 
@@ -477,7 +477,7 @@
         </div>
     </div>
 
-    <footer class="footer line">
+    <footer class="footer theme-line">
         <div class="footer-content">
             <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
             <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
@@ -501,13 +501,13 @@
     </footer>
 
     <!-- Подключаем JS скрипты -->
-    <script src="js/menu.js"></script>
     <script src="js/themeswitch.js"></script>
     <script src="js/translate-language.js"></script>
     <script src="js/about.js"></script>
-    <script src="js/captcha.js"></script>
+    <script src="js/menu.js"></script>
     <script src="js/menu_dropdown.js"></script>
     <script src="js/download.js"></script>
+    <script src="js/captcha.js"></script>
     <script src="js/pushnotify.js"></script>
     <script src="js/banner_promo.js"></script>
     <script src="js/modal_promo.js"></script>
