--- a/home.html
+++ b/home.html
@@ -490,7 +490,7 @@
     </div>
 
     <!-- Corpyright, footer -->
-    <footer class="footer line">
+    <footer class="footer theme-line">
         <div class="footer-content">
             <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
             <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
