--- a/reset-password.html
+++ b/reset-password.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,10 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/typography.css">
-  <link rel="stylesheet" href="css/reset-password.css">
   <link rel="stylesheet" href="css/themes.css" />
-    <!-- Подключение кастомных стилей -->
-  <link rel="stylesheet" href="css/modal_message.css"/>
+  <link rel="stylesheet" href="css/reset-password.css">
+  <!-- Подключение кастомных стилей -->
+  <link rel="stylesheet" href="css/modal_message.css" />
 </head>
 
 <body>
@@ -19,15 +20,17 @@
     <h2 class="resetpassword-title theme-text">Reset password</h2>
     <form class="reset-form">
 
-    <div class="input-icon password-toggle-wrapper">
-    <img src="assets/icons/lock.svg" class="theme-icon" alt="Password" />
-    <input type="password" id="new-password" placeholder="New password" data-placeholder="reset-new-password" required />
-    <img src="assets/icons/eye-crossed.svg" alt="Toggle visibility" class="toggle-visibility theme-icon" />
-    </div>
+      <div class="input-icon password-toggle-wrapper">
+        <img src="assets/icons/lock.svg" class="theme-icon" alt="Password" />
+        <input type="password" id="new-password" placeholder="New password" data-placeholder="reset-new-password"
+          required />
+        <img src="assets/icons/eye-crossed.svg" alt="Toggle visibility" class="toggle-visibility theme-icon" />
+      </div>
 
       <div class="input-icon password-toogle">
         <img src="assets/icons/lock.svg" class="theme-icon" alt="Password Confirm" />
-        <input type="password" id="confirm-password" placeholder="Confirm password" data-placeholder="reset-confirm-password" required />
+        <input type="password" id="confirm-password" placeholder="Confirm password"
+          data-placeholder="reset-confirm-password" required />
       </div>
 
       <div class="password-strength">
@@ -46,8 +49,9 @@
   </div>
 
   <!-- Подключенные скрипты -->
-  <script src="js/reset-password.js"></script>
   <script src="js/translate-language.js"></script>
   <script src="js/themeswitch.js"></script>
+  <script src="js/reset-password.js"></script>
 </body>
+
 </html>
