--- a/products.html
+++ b/products.html
@@ -7,18 +7,18 @@
     <title>ValeyevStudio - Products</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/menu_dropdown.css">
     <link rel="stylesheet" href="css/themes.css">
     <link rel="stylesheet" href="css/typography.css">
     <!-- Подключение кастомных стилей -->
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/menu_dropdown.css">
     <link rel="stylesheet" href="css/captcha.css">
     <link rel="stylesheet" href="css/interactivehelp.css">
     <link rel="stylesheet" href="css/pushnotify.css">
-    <link rel="stylesheet" href="/css/modal_message.css">
+    <link rel="stylesheet" href="css/modal_message.css">
     <link rel="stylesheet" href="css/banner_promo.css">
     <link rel="stylesheet" href="css/modal_promo.css">
-    <link rel="stylesheet" href="/css/deposit.css">
+    <link rel="stylesheet" href="css/deposit.css">
     <link rel="stylesheet" href="css/modal_premium.css">
 </head>
 
