Add referal system v4

--- a/settings.html
+++ b/settings.html
@@ -7,8 +7,8 @@
   <title>ValeyevStudio - Settings</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/themes.css" />
   <link rel="stylesheet" href="css/typography.css">
-  <link rel="stylesheet" href="css/themes.css">
   <link rel="stylesheet" href="css/settings.css">
   <!-- Подключение кастомных стилей -->
   <link rel="stylesheet" href="css/modal_message.css">
