Add referal system v5

--- a/about.html
+++ b/about.html
@@ -500,7 +500,7 @@
         </div>
     </footer>
 
-    <!-- Подключаем JS скрипты -->
+    <!-- Подключенные скрипты -->
     <script src="js/themeswitch.js"></script>
     <script src="js/translate-language.js"></script>
     <script src="js/about.js"></script>
