--- a/referal.html
+++ b/referal.html
@@ -419,9 +419,9 @@
         </div>
     </footer>
 
-    <!-- Подключаем JS скрипты -->
-    <script src="js/themeswitch.js"></script>
+    <!-- Подключенные скрипты -->
     <script src="js/translate-language.js"></script>
+    <script src="js/themeswitch.js"></script>
     <script src="js/referal.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/menu_dropdown.js"></script>
