--- a/products.html
+++ b/products.html
@@ -352,13 +352,13 @@
         </div>
     </footer>
 
-    <!-- Подключаем JS скрипты -->
-    <script src="js/menu.js"></script>
-    <script src="js/themeswitch.js"></script>
+    <!-- Подключенные скрипты -->
     <script src="js/translate-language.js"></script>
-    <script src="js/captcha.js"></script>
+    <script src="js/themeswitch.js"></script>
+    <script src="js/menu.js"></script>
     <script src="js/menu_dropdown.js"></script>
     <script src="js/download.js"></script>
+    <script src="js/captcha.js"></script>
     <script src="js/pushnotify.js"></script>
     <script src="js/banner_promo.js"></script>
     <script src="js/modal_promo.js"></script>
