Add referal system v7

--- a/brand.html
+++ b/brand.html
@@ -133,6 +133,7 @@
             <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
             <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
             <a href="brand.html" class="footer-link nav-partners">Partners</a>
+            <a href="referal.html" class="footer-link nav-referals">Referal program</a>
         </div>
         <div class="footer-social">
             <span class="social-platforms">Social:</span>
@@ -152,8 +153,8 @@
     </footer>
 
     <!-- JS scripts -->
-    <script src="js/themeswitch.js"></script>
     <script src="js/translate-language.js"></script>
+    <script src="js/themeswitch.js"></script>
     <script src="js/brand.js"></script>
 </body>
 
