--- a/settings.html
+++ b/settings.html
@@ -128,6 +128,31 @@
     <div class="section-underline"></div>
   </div>
 
+      <!-- Corpyright, footer -->
+    <footer class="footer theme-line">
+        <div class="footer-content">
+            <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
+            <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
+            <a href="brand.html" class="footer-link nav-partners">Partners</a>
+            <a href="referal.html" class="footer-link nav-referals">Referal program</a>
+        </div>
+        <div class="footer-social">
+            <span class="social-platforms">Social:</span>
+            <a href="https://vk.com/nikitavaleyev" target="_blank">
+                <img src="assets/icons/social/vk.svg" alt="VK" class="theme-icon">
+            </a>
+            <a href="https://www.youtube.com/channel/@NikitaValeyev" target="_blank">
+                <img src="assets/icons/social/youtube.svg" alt="YouTube" class="theme-icon">
+            </a>
+            <a href="https://t.me/nikitavaleyev_musician" target="_blank">
+                <img src="assets/icons/social/telegram.svg" alt="Telegram" class="theme-icon">
+            </a>
+            <a href="https://instagram.com/nikitavaleyev" target="_blank">
+                <img src="assets/icons/social/instagram.svg" alt="Instagram" class="theme-icon">
+            </a>
+        </div>
+    </footer>
+
   <!-- Подключенные скрипты -->
   <script src="js/translate-language.js"></script>
   <script src="js/themeswitch.js"></script>
