--- a/home.html
+++ b/home.html
@@ -495,6 +495,7 @@
             <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
             <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
             <a href="brand.html" class="footer-link nav-partners">Partners</a>
+            <a href="referal.html" class="footer-link nav-referals">Referal program</a>
         </div>
         <div class="footer-social">
             <span class="social-platforms">Social:</span>
