Add referal system v13

--- a/referal.html
+++ b/referal.html
@@ -346,7 +346,7 @@
                     data-i18n="referral.your_code_label">Your
                     referal code</label>
                 <div class="referals-code-wrapper">
-                    <input type="text" id="ref-code" class="referals-code-input theme-input" value="ABC123XYZ"
+                    <input type="text" id="ref-code" class="referals-code-input theme-input" value=""
                         readonly />
                     <button class="referals-copy-btn">
                         <img src="/assets/icons/copy.svg" alt="Copy it" class="copy-icon theme-icon"
