Add referal system v17

--- a/referal.html
+++ b/referal.html
@@ -424,7 +424,7 @@
     <!-- Подключенные скрипты -->
     <script src="js/translate-language.js"></script>
     <script src="js/themeswitch.js"></script>
-    <script src="js/referals.js"></script>
+    <script src="/js/referrals.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/menu_dropdown.js"></script>
     <script src="js/download.js"></script>
