Add + fix ref system v3

--- a/referal.html
+++ b/referal.html
@@ -346,8 +346,7 @@
                     data-i18n="referral.your_code_label">Your
                     referal code</label>
                 <div class="referals-code-wrapper">
-                    <input type="text" id="ref-code" class="referals-code-input theme-input" value=""
-                        readonly />
+                    <input type="text" id="ref-code" class="referals-code-input theme-input" value="" readonly />
                     <button class="referals-copy-btn">
                         <img src="/assets/icons/copy.svg" alt="Copy it" class="copy-icon theme-icon"
                             data-i18n="referral.copy_button">
@@ -380,17 +379,17 @@
 
     <div class="referals-card-infos">
         <div class="referals-card-info theme-card">
-            <div class="referals-info-value theme-text">0</div>
+            <div class="referals-info-value theme-text" id="total-earned">0</div>
             <div class="referals-info-label referals-total-earned-label" data-i18n="referral.total_earned">Total earned
             </div>
         </div>
         <div class="referals-card-info theme-card">
-            <div class="referals-info-value theme-text">1</div>
+            <div class="referals-info-value theme-text" id="rate-per-user">0</div>
             <div class="referals-info-label referals-rate-per-user-label" data-i18n="referral.your_rate_per_user">Your
                 bid per user</div>
         </div>
         <div class="referals-card-info theme-card">
-            <div class="referals-info-value theme-text">0</div>
+            <div class="referals-info-value theme-text" id="invited-users">0</div>
             <div class="referals-info-label referals-invited-users-label" data-i18n="referral.invited_users">Invited
                 users</div>
         </div>
