Add + fix ref system v14

--- a/referal.html
+++ b/referal.html
@@ -378,19 +378,19 @@
     </div>
 
     <div class="referals-card-infos">
-        <div class="referals-card-info theme-card">
+        <div class="referals-card-info card-info-total-earned theme-card">
             <div class="referals-info-value theme-text" id="total-earned">0</div>
             <div class="referals-info-label referals-total-earned-label" data-i18n="referral.total_earned">Total
                 earned
             </div>
         </div>
-        <div class="referals-card-info theme-card">
+        <div class="referals-card-info card-info-rate-per-user theme-card">
             <div class="referals-info-value theme-text" id="rate-per-user">0</div>
             <div class="referals-info-label referals-rate-per-user-label" data-i18n="referral.your_rate_per_user">
                 Your
                 bid per user</div>
         </div>
-        <div class="referals-card-info theme-card">
+        <div class="referals-card-info card-info-invited-users theme-card">
             <div class="referals-info-value theme-text" id="invited-users">0</div>
             <div class="referals-info-label referals-invited-users-label" data-i18n="referral.invited_users">Invited
                 users</div>
