Update UI + Fix bug

--- a/brand.html
+++ b/brand.html
@@ -65,8 +65,8 @@
             </div>
             <div class="color-palette">
                 <div class="color-item">
-                    <div class="color-circle" style="background-color: #884BC1;"></div>
-                    <ul class="color-values">
+                    <div class="color-circle circle-one" style="background-color: #884BC1;"></div>
+                    <ul class="color-values values-one">
                         <li><strong>HEX</strong> #0077FF</li>
                         <li><strong>RGB</strong> 136 75 193</li>
                         <li><strong>CMYK</strong> 0 0 0 0</li>
@@ -74,8 +74,8 @@
                     </ul>
                 </div>
                 <div class="color-item">
-                    <div class="color-circle" style="background-color: #FFFFFF; border: 1px solid #ccc;"></div>
-                    <ul class="color-values">
+                    <div class="color-circle circle-two" style="background-color: #FFFFFF; border: 1px solid #ccc;"></div>
+                    <ul class="color-values values-two">
                         <li><strong>HEX</strong> #FFFFFF</li>
                         <li><strong>RGB</strong> 255 255 255</li>
                         <li><strong>CMYK</strong> 0 0 0 0</li>
@@ -83,8 +83,8 @@
                     </ul>
                 </div>
                 <div class="color-item">
-                    <div class="color-circle" style="background-color: #000000;"></div>
-                    <ul class="color-values">
+                    <div class="color-circle circle-three" style="background-color: #000000;"></div>
+                    <ul class="color-values values-three">
                         <li><strong>HEX</strong> #000000</li>
                         <li><strong>RGB</strong> 0 0 0</li>
                         <li><strong>CMYK</strong> 0 0 0 100</li>
@@ -100,13 +100,13 @@
             <div class="partner-column left">
                 <h3 class="partner-title media-partner-title theme-text" data-i18n="partner.media.title">For media</h3>
                 <p class="partner-description partner-media-description" data-i18n="partner.media.description">For media partnership inquiries and special projects.</p>
-                <a href="mailto:media@valeyevstudio.com" class="partner-link">media@valeyevstudio.com</a>
+                <a href="mailto:media@valeyevstudio.com" class="partner-link link-mediamail">media@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column center">
                 <h3 class="partner-title partner-press-title theme-text" data-i18n="partner.press.title">Press Representatives</h3>
                 <p class="partner-description partner-press-description" data-i18n="partner.press.description">Press office contact for media inquiries.</p>
-                <a href="mailto:press@vk.com" class="partner-link">press@valeyevstudio.com</a>
+                <a href="mailto:press@vk.com" class="partner-link link-pressmail">press@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column right">
